--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,13 @@ Jinja2==2.7.3
 MarkupSafe==0.23
 PIL==1.1.7
 Werkzeug==0.9.6
+arrow==0.4.4
 beautifulsoup4==4.3.2
 boto==2.18.0
 gdata==2.0.18
 itsdangerous==0.24
+python-dateutil==2.2
 python-google-spreadsheet==2.0.0
 requests==2.2.1
+six==1.7.3
 wsgiref==0.1.2
