--- a/main/static/package.json
+++ b/main/static/package.json
@@ -7,6 +7,7 @@
     "grunt-contrib-compass": "^0.8.0",
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-cssmin": "^0.10.0",
+    "grunt-contrib-handlebars": "^0.8.0",
     "grunt-contrib-imagemin": "^0.7.0",
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-watch": "^0.6.1"
